--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -13,5 +13,10 @@ html(lang="ru")
   body
     .container 
       include ../sections/_s1_header.pug
+      include ../sections/_s2_main_slider.pug
+      include ../sections/_s3_services.pug
+      include ../sections/_s4_garanty.pug
+    include ../sections/_s5_business_plan.pug
+    include ../sections/_s6_scheme.pug
     
     script(defer, src="js/app.min.js")
