--- a/app/pug/sections/_s1_header.pug
+++ b/app/pug/sections/_s1_header.pug
@@ -18,4 +18,25 @@
         .header__email__text
             |work@biz-plan.kz
         a(href="#") Задать вопрос
-.line
+.line_container
+    .line
+.header_menu
+    ul 
+        li 
+            a(href="#") Главная
+        li 
+            a(href="#") Услуги
+        li 
+            a(href="#") Стоимость
+        li 
+            a(href="#") Статьи
+        li 
+            a(href="#") Портфолио
+        li 
+            a(href="#") Купить бизнес-план
+        li 
+            a(href="#") Скачать бизнес-план
+        li 
+            a(href="#") FAQ
+        li 
+            a(href="#") Контакты
