--- a/app/scss/sections/_s1_header.scss
+++ b/app/scss/sections/_s1_header.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 30px 15px 0;
+    margin: 30px 15px;
 
     .header__logo{
         width: 141px;
@@ -121,6 +121,33 @@
      }
 }
 
+.line_container {
+    width: 100%;
+    padding: 0 15px;
+}
 .line {
     width: 100%;
+    height: 1px;
+    background: #d1d9e1;
+}
+
+.header_menu {
+    padding: 0 15px;
+    margin-top: 30px;
+    width: 100%;
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li a {
+            @extend %font_medium;
+            font-size: 15px;
+            line-height: 1.2;
+        }
+    }
 }
