--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -16,7 +16,14 @@ html(lang="ru")
       include ../sections/_s2_main_slider.pug
       include ../sections/_s3_services.pug
       include ../sections/_s4_garanty.pug
-    include ../sections/_s5_business_plan.pug
-    include ../sections/_s6_scheme.pug
+    .lighter_bg
+      include ../sections/_s5_business_plan.pug
+      include ../sections/_s6_scheme.pug
+      include ../sections/_s7_director.pug
+      include ../sections/_s8_commands.pug
+      include ../sections/_s9_our_works.pug
+      include ../sections/_s10_clients.pug
+      include ../sections/_s11_qa.pug
+      include ../sections/_s12_footer.pug
     
-    script(defer, src="js/app.min.js")
+    //- script(defer, src="js/app.min.js")
