--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -10,8 +10,13 @@ $sizes: ("xs":320px, "sm":576px, "md":768px, "lg":992px, "xl":1200px);
     }
   }
 
- @mixin _lg {
-    @media (max-width: 992px){
-        @content;
-    }
+@mixin _lg {
+  @media (max-width: 992px){
+      @content;
+  }
+} 
+@mixin _sm {
+  @media (max-width: 576px){
+      @content;
+  }
 } 
