--- a/app/scss/sections/_s2_main_slider.scss
+++ b/app/scss/sections/_s2_main_slider.scss
@@ -4,9 +4,14 @@
     align-items: flex-start;
     margin-top: 70px;
 
+    @include _lg {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
     .main_slider__text {
         max-width: 476px;
-        margin-top: 30px;
+        margin: 30px 0;
 
         .title h1 {
             @extend %font_bold;
@@ -15,6 +20,11 @@
             line-height: 1.2;
             text-align: left;
             text-transform: uppercase;
+
+            @include _sm {
+                font-size: 24px;
+                text-align: center;
+            }
             
             i.green {
                 color: #8eb24c;
@@ -27,10 +37,20 @@
             font-size: 30px;
             line-height: 1.2;
             max-width: 395px;
+
+            @include _sm {
+                font-size: 15px;
+                text-align: center;
+            }
         }
 
         .button {
             margin-top: 45px;
+            
+            @include _sm{
+                margin: 15px auto;
+                text-align: center;
+            }
         }
     }
 
@@ -38,8 +58,17 @@
         width: 530px;
         height: 582px;
         background-image: url($images + "slider_01.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
         display: block;
         z-index: -1;
+
+        @include _sm {
+            width: 265px;
+            height: 291px;
+            background-size: cover;
+            background-position: center;
+        }
     }
 }
 
@@ -48,12 +77,13 @@
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 8px 35px 0px rgba(0, 0, 0, 0.14);
     max-width: 1140px;
-    height: 171px;
+    min-height: 171px;
     z-index: 1;
 
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
     padding: 20px;
     margin-bottom: 100px;
 
@@ -62,6 +92,7 @@
         justify-content: flex-start;
         align-items: flex-start;
         max-width: 255px;
+        margin-top: 20px;
         .handout__image {
             display: block;
             margin-right: 18px;
