--- a/app/scss/sections/_s3_services.scss
+++ b/app/scss/sections/_s3_services.scss
@@ -14,6 +14,13 @@
         display: flex;
         justify-content: center;
 
+        @include _sm {
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+            padding: 10px 0 10px 10px;
+        }
+
         .card_content {
             width: 80%;
             padding-right: 20px;
@@ -28,6 +35,11 @@
             color: inherit;
             font-size: 20px;
             margin: 15px 0;
+
+            @include _sm {
+                font-size: 14px;
+                margin: 6px 0;
+            }
         }
 
         .card_text {
@@ -35,6 +47,11 @@
             color: inherit;
             font-size: 14px;
             line-height: 1.8;
+
+            @include _sm {
+                font-size: 10px;
+                margin: 6px 0;
+            }
         }
 
         .arrow_btn {
@@ -49,6 +66,10 @@
             background-repeat: no-repeat;
             background-position: center;
             cursor: pointer;
+
+            @include _sm {
+                transform: scale(.6);
+            }
         }
 
     }
