main fixes part 1

--- a/app/pug/sections/_s2_main_slider.pug
+++ b/app/pug/sections/_s2_main_slider.pug
@@ -1,4 +1,9 @@
-.main_slider 
+.main_slider
+    .main_slider__nav 
+        .nav_element.active 
+        .nav_element
+        .nav_element
+        .nav_element
     .main_slider__text
         .title 
             h1 
