--- a/app/scss/_extentions.scss
+++ b/app/scss/_extentions.scss
@@ -37,3 +37,32 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 }
+
+
+%button_orange {
+    // background: url($images + "orange_btn_line.png") no-repeat;
+    background-image: url($images + "orange_btn_line.png") , linear-gradient( 90deg, rgb(254,81,3) 0%, rgb(243,125,73) 100%),;
+    background-repeat: no-repeat, no-repeat;
+    background-position: 20px, center;
+    // background-color: rgb(254,81,3);
+    box-shadow: 0px 8px 35px 0px rgba(0, 0, 0, 0.35),
+                0px 4px 0px 0px rgba(210, 76, 16, 0.004),
+                0px 4px 2px #a13a0c;
+    padding: 0 40px;
+    border-radius: 26px;
+    border: 0;
+
+      
+
+    // @extend %font_semibold;
+    @extend %font_medium;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+    line-height: 1.2;
+    height: 55px;
+
+    &:active,
+    &:focus {
+        outline: none;
+    }
+}
