--- a/app/scss/sections/_sidebars.scss
+++ b/app/scss/sections/_sidebars.scss
@@ -3,20 +3,25 @@
     align-items: flex-start;
     margin-top: 30px;
 
-    .left_sidebar {
+    .left_sidebar,
+    .sidebar {
         margin: 0 25px 20px 15px;
         width: 270px;
         display: flex;
         flex-direction: column;
-        border-radius: 5px;
+        border-radius: 10px;
         background-color: rgb(255, 255, 255);
         box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.08);
         @include _sm {
             display: none;
         }
           
+        h3 {
+            @extend %font_medium;
+            font-size: 16px;
+        }
 
-        .title {
+        .title, h2 {
             background-image: linear-gradient( 126deg, rgb(63,103,63) 0%, rgb(157,188,100) 100%);
             width: 270px;
             height: 50px;
@@ -25,6 +30,11 @@
             color: #fff;
             padding: 14px 0 0 18px;
             border-radius: 10px 10px 0 0;
+            margin: 0;
+
+            &::after {
+                display: none;
+            }
         }
 
         .sidebar__item {
@@ -44,7 +54,69 @@
               }
               
         }
+
+        .wc-block-attribute-filter-list-count,
+        .wc-block-product-categories-list-item-count {
+            visibility: hidden;
+        }
+
+        .widget_block > div {
+            padding: 0 20px;
+        }
+
+        .widget_search {
+            padding: 20px
+        }
+
           
+        .widget_block {
+            margin: 0;
+            border-top: 1px solid #d7dfe7;
+
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+            }
+
+            li {            
+                // padding: 6px 6px 8px;
+                margin: 0;
+                padding: 10px 10px;
+                border-top: 1px solid #d7dfe7;
+    
+                a {
+                    @extend %font;
+                    font-size: 15px;
+                    color: rgb(43, 43, 43);
+                    line-height: 1.2;
+                    text-decoration: none;
+                    //padding-left: 20px;
+    
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                  }
+
+            }
+            
+            label {
+                padding-left: 6px;
+                @extend %font;
+            }
+            .wc-block-product-search {
+                margin: 10px 0 20px;
+            }
+        }
+
+        .wc-block-components-price-slider__range-input-progress {
+            --track-background: linear-gradient(90deg,transparent var(--low),var(--range-color) 0,var(--range-color) var(--high),transparent 0) no-repeat 0 100%/100% 100%;
+            --range-color: #9ab963 !important;
+        }
     }
 
+}
+
+.reverse_to_right {
+    flex-direction: row-reverse;
 }
